fix x-scrollbar bug with tilt

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
   overflow-y: scroll;
   transition: all .2s;
   background-color: rgb(36, 36, 36);
+  overflow-x: hidden;
 }
 
 .outerContent:hover, .content:hover {
